# bible-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  migrate_to_bible_project.py  pyproject.toml  setup_bible_schema.py
bible_rag/: __init__.py  load.py  load_xrefs.py  query.py
bible_rag/agent/: __init__.py  factory.py  prompts.py  tools.py
bible_rag/api/: __init__.py  app.py
bible_rag/data/: curated_verses.py
bible_rag/services/: __init__.py  bible.py
bible_toolkit/: __init__.py
bible_toolkit/core/: __init__.py  client.py  models.py
bible_toolkit/enrichment/: 01_book_metadata.py  02_chapter_summaries.py  03_verse_insights.py  04_emotion_tags.py  __init__.py  config.py
docs/: api-reference.md  architecture.md  integration-guide.md
