[project]
name = "bible-toolkit"
version = "0.2.0"
description = "Bible data library, enrichment tools, and RAG application"
requires-python = ">=3.10"
dependencies = [
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    # Agent
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
# Data loaders
bible-load = "bible_rag.load:main"
bible-load-xrefs = "bible_rag.load_xrefs:main"
# CLI tools
bible = "bible_rag.query:main"
bible-chat = "bible_rag.agent:main"
bible-serve = "bible_rag.api:serve"
# Enrichment (run via: uv run python -m bible_toolkit.enrichment.01_book_metadata)
